@@ -1,3 +1,7 @@
+2006-05-09	Rupert Germann <rupi@gmx.li>
+
+	* added italian translation. Thanks to Claudio Strizzolo.
+
 2006-04-27	Rupert Germann <rupi@gmx.li>
 
 	* feature: added two new category modes:
@@ -15,7 +19,7 @@
 
 	* fix: added the fix for "New or edited news records were not displayed in TYPO3 version below 4.0" to tt_news categories, too.
 	* fix: added some labels to the pi/locallang.xml file
-	* added slovak translation for locallang_tca.xml
+	* added slovak translation for locallang_tca.xml. thanks to George from Slovakia.
 	* version nr: 2.3.5
 
 2006-04-19	Rupert Germann <rupi@gmx.li>
